--- a/sobre.html
+++ b/sobre.html
@@ -82,7 +82,7 @@
                 Rua Remédios Fernandes, Número 6 - Rodilândia
                 Nova Iguaçu / RJ - CEP 26083480
             </p>
-            <h3> <b>Contato:</b> (21) 987553780 | <b>E-mail:</b> douglasdeoliveiradd@gmail.com | <b>GitHub:</b>
+            <h3> <b>Telefone:</b> (21) 987553780 | <b>E-mail:</b> douglasdeoliveiradd@gmail.com | <b>GitHub:</b>
                 github.com/douglasoliveira96</h3>
             <h3><b>OBJETIVOS</b></h3>
             <P>Busco experiência profissional, e para me manter estável viso desenvolver minhas competências técnicas
