--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="topnav" id="myTopnav">
         <a href="#" class="active">Home</a>
         <a href="sobre.html" class="sobre">Sobre Mim</a>
-        <a href="#" class="contato">Contato</a>
+        <a href="contato.html" class="contato">Contato</a>
     </nav>
     <main class="background">
         <h1 class="nome">Douglas de O. Henrique</h1>
@@ -73,7 +73,7 @@
         </div>
     </section>
     <footer>
-        Copyright © 2021 - by Douglas de Oliveira
+        Desenvolvido por Douglas de Oliveira
     </footer>
     <script>
         function typeWriter(elemento) {
