--- a/sobre.html
+++ b/sobre.html
@@ -74,7 +74,7 @@
     <div>
         <h1>INDÍCE</h1>
         <h2 style="color: #082e66;
-        ">CURRÍCULOS <br>
+        ">CURRÍCULO <br>
             CERTIFICADOS</h2>
     </div>
     <section class="curriculo">
