--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="contato.css">
+    <link rel="shortcut icon" href="img/Dryicons-Aesthetica-2-Folder-full-accept.ico" type="image/x-icon">
     <title>Contato</title>
     <link rel="shortcut icon" href="img/social-media.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/1c16c3f6f7.js" crossorigin="anonymous"></script>
