--- a/sobre.html
+++ b/sobre.html
@@ -60,11 +60,15 @@
             color: rgb(33, 33, 58);
         }
         .url:hover {
+            color: rgb(33, 33, 58);
             text-decoration: underline;
+        }
+        .url {
+            color: rgb(33, 33, 58);
         }
         section {
             padding: 50px;
-        }
+        }        
     </style>
     <nav class="topnav">
         <a href="index.html" class="home">Home</a>
