--- a/sobre.html
+++ b/sobre.html
@@ -91,7 +91,7 @@
                 Rua Remédios Fernandes, Número 6 - Rodilândia
                 Nova Iguaçu / RJ - CEP 26083480
             </p>
-            <h3> <b>Telefone:</b> <a href="https://api.whatsapp.com/send?phone=5521987553780" target="_blank" class="url">(21) 987553780</a> | <b>E-mail:</b> douglasdeoliveiradd@gmail.com | <b>GitHub:</b>
+            <h3> <b>Telefone:</b> (21) 987553780 | <b>E-mail:</b> douglasdeoliveiradd@gmail.com | <b>GitHub:</b>
                 <a href="https://github.com/douglasoliveira96" target="_blank" class="url">github.com/douglasoliveira96</a></h3>
             <h3><b>OBJETIVOS</b></h3>
             <P>Busco experiência profissional, e para me manter estável viso desenvolver minhas competências técnicas
