--- a/contato.html
+++ b/contato.html
@@ -21,7 +21,7 @@
         <a href="#" class="active">Contato</a>
     </nav>
     <div class="titulo">
-        <h1><a href="redes.html">Entre em Contato</a></h1>
+        <h1>Entre em Contato</h1>
         <p>geralmente respondo em até 24h</p>
     </div>   
 
