--- a/sobre.html
+++ b/sobre.html
@@ -77,13 +77,13 @@
     </nav>
     <div>
         <h1>INDÍCE</h1>
-        <h2 style="color: #082e66;
-        ">CURRÍCULO <br>
-            CERTIFICADOS</h2>
+        <h2 class="indice" style="color: #082e66;
+        "><a href="#cv">CURRÍCULO</a></h2>
+            <h2><a href="#">CERTIFICADOS</a></h2>
     </div>
     <section class="curriculo">
         <div>
-            <h2 style="color: #0e1013; font-size: 2em;">1. CURRÍCULO</h2>
+        <h2 style="color: #0e1013; font-size: 2em;" id="cv">1. CURRÍCULO</h2>
         </div>
         <h3><b>DOUGLAS DE OLIVEIRA HENRIQUE</b></h2>
             <p>
@@ -119,8 +119,11 @@
             <li>Carteira de habilitação B</li>
     </section>
 
-
     <footer>Desenvolvido por Douglas de Oliveira</footer>
+    
+    <script type="text/javascript" src="js/app.js"></script>
+
 </body>
 
 </html>
+
