--- a/sobre.html
+++ b/sobre.html
@@ -57,7 +57,7 @@
         }
         a {
             text-decoration: none;
-            color: rgb(33, 33, 58);
+            color: #21213a;
         }
         .url:hover {
             color: rgb(33, 33, 58);
@@ -68,7 +68,10 @@
         }
         section {
             padding: 50px;
-        }        
+        }  
+        .indice {
+            color: black;
+        }      
     </style>
     <nav class="topnav">
         <a href="index.html" class="home">Home</a>
@@ -76,9 +79,8 @@
         <a href="contato.html" class="contato">Contato</a>
     </nav>
     <div>
-        <h1>INDÍCE</h1>
-        <h2 class="indice" style="color: #082e66;
-        "><a href="#cv">CURRÍCULO</a></h2>
+        <h1>ÍNDICE</h1>
+        <h2><a href="#cv"><span style="color: #21213a;" >CURRÍCULO</span></a></h2>
             <h2><a href="#">CERTIFICADOS</a></h2>
     </div>
     <section class="curriculo">
