--- a/sobre.html
+++ b/sobre.html
@@ -69,9 +69,7 @@
         section {
             padding: 50px;
         }  
-        .indice {
-            color: black;
-        }      
+           
     </style>
     <nav class="topnav">
         <a href="index.html" class="home">Home</a>
@@ -80,7 +78,7 @@
     </nav>
     <div>
         <h1>ÍNDICE</h1>
-        <h2><a href="#cv"><span style="color: #21213a;" >CURRÍCULO</span></a></h2>
+        <h2 class="indice"><a href="#cv"><span style="color: #21213a;" >CURRÍCULO</span></a></h2>
             <h2><a href="#">CERTIFICADOS</a></h2>
     </div>
     <section class="curriculo">
